--- a/qna/pom.xml
+++ b/qna/pom.xml
@@ -1,12 +1,43 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>net.slipp</groupId>
-  <artifactId>qna</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  
-  <packaging>war</packaging>
-  
-  
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>net.slipp</groupId>
+	<artifactId>qna</artifactId>
+	<version>1.0.0</version>
+	<packaging>war</packaging>
+
+	<build>
+
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>utf-8</encoding>
+				</configuration>
+
+				<!-- <executions> -->
+				<!-- <execution> -->
+				<!-- <id>default-compile</id> -->
+				<!-- <phase>compile</phase> -->
+				<!-- <goals> -->
+				<!-- <goal>compile</goal> -->
+				<!-- </goals> -->
+				<!-- </execution> -->
+				<!-- <execution> -->
+				<!-- <id>default-testCompile</id> -->
+				<!-- <phase>test-compile</phase> -->
+				<!-- <goals> -->
+				<!-- <goal>testCompile</goal> -->
+				<!-- </goals> -->
+				<!-- </execution> -->
+				<!-- </executions> -->
+			</plugin>
+
+		</plugins>
+	</build>
+
+
 </project>
